# src/controllers/index.ts
@@ -7,3 +7,5 @@ export * from './user'
 export * from './enum'
 
 export * from './servey'
+
+export * from './customisecar'
