# src/routes/index.ts
@@ -5,6 +5,7 @@ import auth from './auth'
 import user from './user'
 import enums from './enums'
 import servey from './serveys'
+import customisecar from './customisecar'
 
 const router = Router()
 
@@ -17,5 +18,7 @@ router.use('/user', user)
 router.use('/enums', enums)
 
 router.use('/servey', servey)
+
+router.use('/customisecar', customisecar)
 
 export default router
